# Trustbit-barcode

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
trustbit_barcode/: __init__.py  api.py  hooks.py  install.py  modules.txt
trustbit_barcode/barcode_label_size/: barcode_label_size.json
trustbit_barcode/barcode_print_settings/: barcode_print_settings.json
trustbit_barcode/doctype/barcode_label_size/: barcode_label_size.json
trustbit_barcode/doctype/barcode_print_settings/: barcode_print_settings.json  barcode_print_settings.py
trustbit_barcode/public/js/: barcode_print.js  qz-tray.js
trustbit_barcode/trustbit_barcode/doctype/barcode_label_size/: barcode_label_size.json  barcode_label_size.py
trustbit_barcode/trustbit_barcode/doctype/barcode_print_settings/: barcode_print_settings.json  barcode_print_settings.py
