[project]
name = "trustbit_barcode"
version = "1.0.2"
description = "Direct thermal barcode label printing from ERPNext with QZ Tray"
authors = [
    {name = "Trustbit", email = "ra.pandey008@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "trustbit_barcode"
